# alpha_py

Git/Aula_01/: readme.md
Py Av/Aula_04/: x_count.py
Py Av/Aula_11/: calc_div.py
Py Av/Projeto_01/: README.md  requiriments.txt
Py Av/Projeto_01/project/: pyproject.toml
Py Av/Projeto_02/: README.md  requiriments.txt
Py Av/Projeto_02/p2-project/: pyproject.toml
Python/Aula_01/a,b,x,y/: 001-4.py
Python/Aula_01/cedulas/: 001-7.py
Python/Aula_01/circunferencia/: 001-1.py
Python/Aula_01/comissao/: 001-5.py
Python/Aula_01/maior_e_menor/: 001-6.py
Python/Aula_01/paralelepipedo/: 001-2.py
Python/Aula_01/temperatura/: 001-3.py
Python/Aula_02/: carnes.py  identificacao.py  imposto.py  numero.py  ordem.py  salario.py  tipo_letra.py
Python/Aula_03/: fatorial.py  soma.py  timer.py  xadrez.py
Python/Aula_04/: caracteres.py  intercalador.py  pangrama .py  reescrever_frase.py  tira_vogal(2).py  tira_vogal.py
Python/Aula_05/: list.py  numbersList.py  ordem.py  soma.py  vetores.py
